--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -70,7 +70,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: buildAndTestForSomePlatforms
     env:
-      ANDROID_BUILD_FILE_PATH: ${{ format('{0}/build/Android/Android.aab', github.workspace) }}
+      ANDROID_BUILD_FILE_PATH: ${{ format('{0}/build/Android/Android.apk', github.workspace) }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -79,6 +79,18 @@ jobs:
         with:
           name: build-Android
           path: build/Android
+      - uses: wzieba/Firebase-Distribution-Github-Action@v1.3.2
+        with:
+        # App id can be found on the General Settings page
+          appId: ${{secrets.FIREBASE_APP_ID}}
+          # Upload token - see Firebase CLI Reference
+          token: ${{secrets.FIREBASE_APP_ID}}
+          # Artifact to upload (.apk or .ipa)
+          file: $ANDROID_BUILD_FILE_PATH
+          # Distribution groups
+          groups: test
+          # Release notes visible on release page
+          releaseNotes: Release notes.
           
   #####################################################################################################################
   ## Discord notification
