--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -79,6 +79,8 @@ jobs:
         with:
           name: build-Android
           path: build/Android
+      - name: Display structure of downloaded files
+        run: ls -R
       - uses: wzieba/Firebase-Distribution-Github-Action@v1.3.2
         with:
         # App id can be found on the General Settings page
