--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -88,7 +88,7 @@ jobs:
           # Upload token - see Firebase CLI Reference
           token: ${{secrets.FIREBASE_APP_ID}}
           # Artifact to upload (.apk or .ipa)
-          file: ${{$ANDROID_BUILD_FILE_PATH}}
+          file: hola
           # Distribution groups
           groups: test
           # Release notes visible on release page
