--- a/.github/workflows/build-test-2.yml
+++ b/.github/workflows/build-test-2.yml
@@ -59,7 +59,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: build-Android
-          path: builds/Android
+          path: build/Android
           
   #####################################################################################################################
   ## App Distribution
@@ -70,7 +70,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: buildAndTestForSomePlatforms
     env:
-      ANDROID_BUILD_FILE_PATH: ${{ format('{0}/builds/Android/BlockBreaker.apk', github.workspace) }}
+      ANDROID_BUILD_FILE_PATH: ${{ format('{0}/build/Android/BlockBreaker.apk', github.workspace) }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -78,7 +78,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build-Android
-          path: builds/Android
+          path: build/Android
       - name: Display structure of downloaded files
         run: echo ${{env.ANDROID_BUILD_FILE_PATH}}
       - uses: wzieba/Firebase-Distribution-Github-Action@v1.3.2
