--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -71,7 +71,7 @@ jobs:
     env:
       ANDROID_BUILD_FILE_PATH: ${{ format('{0}/build/Android/BlockBreaker.apk', github.workspace) }}
       FIREBASE_GROUP: test
-      FIREBASE_RELEASE_NOTES: test222
+      FIREBASE_RELEASE_NOTES: ${{ format('Android build number #{0} requested by {1}.', github.run_number, github.actor) }}
     steps:
       - name: Test 1
         run: echo ${{github.workflow}}
@@ -105,7 +105,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: appDistribution
     env:
-      DISCORD_MESSAGE: ${{ format('{0}/build/Android/BlockBreaker.apk', github.workspace) }}
+      DISCORD_MESSAGE: ${{ format('Android build number #{0} requested by {1} has been successfully deployed to Firebase.', github.run_number, github.actor) }}
     steps:
       - name: Cleanup to avoid storage limit
         if: always()
