--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -69,18 +69,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: buildForAndroidPlatform
     env:
-      ANDROID_BUILD_FILE_PATH: ${{ format('{0}/build/Android/BlockBreaker.apk', github.workspace) }}
+      ANDROID_BUILD_FILE_PATH: '${{ github.workspace }/build/Android/BlockBreaker.apk}'
       FIREBASE_GROUP: test
-      FIREBASE_RELEASE_NOTES: ${{ format('Android build number #{0} requested by {1}.', github.run_number, github.actor) }}
+      FIREBASE_RELEASE_NOTES: 'Android build number #${{ github.run_number }} requested by ${{ github.actor }}.'
     steps:
-      - name: Test 1
-        run: echo ${{github.workflow}}
-      - name: Test 2
-        run: echo ${{github.event}}
-      - name: Test 3
-        run: echo ${{github.actor}}
-      - name: Test 4
-        run: echo ${{github.run_number}}
       - name: Checkout Repository
         uses: actions/checkout@v2
       - name: Download Android Artifact
@@ -105,7 +97,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: appDistribution
     env:
-      DISCORD_MESSAGE: ${{ format('Android build number #{0} requested by {1} has been successfully deployed to Firebase.', github.run_number, github.actor) }}
+      DISCORD_MESSAGE: 'Android build number #${{ github.run_number }} requested by ${{ github.actor }} has been successfully deployed to Firebase.'
     steps:
       - name: Cleanup to avoid storage limit
         if: always()
