--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -3,7 +3,8 @@ name: Android Build
 on:
   workflow_dispatch: {}
   pull_request:
-    branches: [ qa ]
+    branches:
+      - qa
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
