--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -47,6 +47,8 @@ jobs:
           restore-keys: |
             Library-${{ matrix.projectPath }}-
             Library-
+      - name: Log
+        run: ls -a
       - uses: game-ci/unity-builder@v2
         id: buildStep
         with:
